--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
   }],
   "require": {
     "php": "~7.0|~7.1",
-    "tedivm/stash-bundle": "0.5.*"
+    "tedivm/stash-bundle": "0.5.*",
+    "predis/predis": "^1.1"
   },
   "require-dev": {
     "illuminate/container": "5.1.x|5.2.x|5.3.x|5.4.x|5.5.x",
-    "illuminate/support": "5.1.x|5.2.x|5.3.x|5.4.x|5.5.x",
-    "predis/predis": "^1.1"
+    "illuminate/support": "5.1.x|5.2.x|5.3.x|5.4.x|5.5.x"
   },
   "autoload": {
     "psr-4": {
